plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.11'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.jh'
version = '0.0.1-SNAPSHOT'
description = 'BatchBridge'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    // Apache POI for .xlsx parsing
    implementation 'org.apache.poi:poi-ooxml:5.4.0'
    // Apache ODF Toolkit for .ods parsing
    implementation('org.odftoolkit:odfdom-java:0.12.0') {
        exclude group: 'org.slf4j', module: 'slf4j-simple'
    }
    // OpenCSV for .csv parsing
    implementation 'com.opencsv:opencsv:5.9'
    // ICU4J for encoding detection
    implementation 'com.ibm.icu:icu4j:74.2'
    // Jackson for .jsonl parsing
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    // jtokkit for token estimation
    implementation 'com.knuddels:jtokkit:1.1.0'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'com.h2database:h2'
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
